Now have a ton of classes. Outputs are fired from an external class as well

--- a/Voronoi/Voronoi.csproj
+++ b/Voronoi/Voronoi.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Point2D.cs" />
     <Compile Include="PriorityQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VoronoiOutput.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
