missed saving the Runner file

--- a/Runner/Runner.csproj
+++ b/Runner/Runner.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,6 +51,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ImageComparer\ImageComparer.csproj">
+      <Project>{f40f22ce-6545-474b-a9de-715b9f4525f2}</Project>
+      <Name>ImageComparer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VoronoiWriter\VoronoiWriter.csproj">
+      <Project>{5d1a59a8-a64d-4ff3-ade5-fb49ea6a23e4}</Project>
+      <Name>VoronoiWriter</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Voronoi\Voronoi.csproj">
       <Project>{4545723c-3e6d-48e0-a35a-7d612e50d6b1}</Project>
       <Name>Voronoi</Name>
