added to runner

--- a/Runner/Runner.csproj
+++ b/Runner/Runner.csproj
@@ -55,9 +55,9 @@
       <Project>{f40f22ce-6545-474b-a9de-715b9f4525f2}</Project>
       <Name>ImageComparer</Name>
     </ProjectReference>
-    <ProjectReference Include="..\VoronoiWriter\VoronoiWriter.csproj">
+    <ProjectReference Include="..\VoronoiWriter\VoronoiDrawer.csproj">
       <Project>{5d1a59a8-a64d-4ff3-ade5-fb49ea6a23e4}</Project>
-      <Name>VoronoiWriter</Name>
+      <Name>VoronoiDrawer</Name>
     </ProjectReference>
     <ProjectReference Include="..\Voronoi\Voronoi.csproj">
       <Project>{4545723c-3e6d-48e0-a35a-7d612e50d6b1}</Project>
