--- a/VoronoiTests/VoronoiTests.csproj
+++ b/VoronoiTests/VoronoiTests.csproj
@@ -54,9 +54,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VoronoiWriter\VoronoiWriter.csproj">
+    <ProjectReference Include="..\VoronoiWriter\VoronoiDrawer.csproj">
       <Project>{5d1a59a8-a64d-4ff3-ade5-fb49ea6a23e4}</Project>
-      <Name>VoronoiWriter</Name>
+      <Name>VoronoiDrawer</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
