--- a/VoronoiWriter/VoronoiDrawer.csproj
+++ b/VoronoiWriter/VoronoiDrawer.csproj
@@ -44,7 +44,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="VoronoiWriter.cs" />
+    <Compile Include="Drawer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
