--- a/Voronoi/Voronoi.csproj
+++ b/Voronoi/Voronoi.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Point2D.cs" />
     <Compile Include="PriorityQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadonlyBitmap.cs" />
     <Compile Include="VoronoiOutput.cs" />
   </ItemGroup>
   <ItemGroup>
