--- a/Voronoi/Voronoi.csproj
+++ b/Voronoi/Voronoi.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DoubleComparison.cs" />
     <Compile Include="Drawer.cs" />
     <Compile Include="EdgeList.cs" />
     <Compile Include="Edge.cs" />
